fix: address search
