# main.go
@@ -229,6 +229,7 @@ func main() {
 	
 	// Ohio address endpoints
 	protected.GET("/addresses", handlers.SearchOhioAddressesHandler)
+	protected.GET("/addresses/search", handlers.FullTextSearchAddressesHandler)
 	protected.GET("/addresses/:id", handlers.GetOhioAddressHandler)
 	
 	// Ohio county boundary endpoints
